; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/serdev/extr_core.c_modalias_show.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/serdev/extr_core.c_modalias_show.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @modalias_show to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @modalias_show(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.device_attribute*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i64, i64* @PAGE_SIZE, align 8
  %12 = sub nsw i64 %11, 1
  %13 = call i32 @acpi_device_modalias(%struct.device* %9, i8* %10, i64 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* @ENODEV, align 4
  %16 = sub nsw i32 0, %15
  %17 = icmp ne i32 %14, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %3
  %19 = load i32, i32* %8, align 4
  store i32 %19, i32* %4, align 4
  br label %25

20:                                               ; preds = %3
  %21 = load %struct.device*, %struct.device** %5, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* @PAGE_SIZE, align 8
  %24 = call i32 @of_device_modalias(%struct.device* %21, i8* %22, i64 %23)
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %20, %18
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @acpi_device_modalias(%struct.device*, i8*, i64) #1

declare dso_local i32 @of_device_modalias(%struct.device*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
